# Cred-Crypt

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
script/: genSymLinks.sh
src/: CMakeLists.txt  TODO  api.cpp  cJSON.c  cli.cpp  credCryptImpl.cpp  credential.cpp  credentialData.cpp  credentialKey.cpp  ctrMode.c  hash.c  headerReader.cpp  headerWriter.cpp  identifier.cpp  keyChecker.cpp  masterKey.cpp  ocbMode.c  pad.c  parser.cpp  random.cpp  redBlackTree.cpp  scrypt.c  secureString.cpp  testMain.cpp  timer.cpp  util.c
src/include/: api.hpp  brg_endian.h  brg_types.h  cJSON.h  cli.hpp  constants.h  credCryptImpl.hpp  credential.hpp  credentialData.hpp  credentialKey.hpp  cryptoStructs.h  ctrMode.h  endianConvert.h  errors.h  exceptions.hpp  hash.h  headerBase.hpp  headerReader.hpp  headerWriter.hpp  identifier.hpp  keyBase.hpp  keyChecker.hpp  keyValuePair.hpp  masterKey.hpp  nodeBase.hpp  nodeValueBase.hpp  ocbMode.h  pad.h  parser.hpp  pbkdf2Skein512.h  random.hpp  redBlackStructs.h  redBlackTree.hpp  redBlackTreeNode.hpp  redBlackUtils.hpp  registry.hpp  scrypt.h  secureString.hpp  skein.h  skeinApi.h  (+7 more)
test/: CMakeLists.txt  lib64  mockNodeValue.cpp  testCredential.cpp  testCtrMode.cpp  testIdentifier.cpp  testMain.cpp  testMasterKey.cpp  testOcbMode.cpp  testRedBlackTree.cpp  testRegistry.cpp  testSecureString.cpp
test/include/: mockNodeValue.hpp  testCtrMode.hpp  testNode.hpp  testOcbMode.hpp  testRedBlackTree.hpp  testRegistry.hpp  testSecureString.hpp
